@@ -23,6 +23,7 @@
 	<label index="deleteRecord">Einträge löschen</label>
 	<label index="show">Zeigen</label>
 	<label index="showDetails">Details anzeigen</label>
+	<label index="showMore">Mehr anzeigen</label>
 	<label index="hide">Verstecken</label>
 	<label index="unhide">Sichtbar machen</label>
 	<label index="rename">Umbenennen</label>
